Update MySQL configuration for AlwaysData deployment
- Updated MySQL host to mysql-meruva.alwaysdata.net
- Configured database credentials for production
- Database schema successfully created with 6 tables
- Connection tested and verified working
- Backend server tested successfully on port 3000

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -5,7 +5,7 @@ MISTRAL_MODEL=mistral-large-latest
 # Get your API key from: https://console.mistral.ai/
 
 # Database Configuration
-MYSQL_HOST=localhost
+MYSQL_HOST=mysql-meruva.alwaysdata.net
 MYSQL_PORT=3306
 MYSQL_USER=root
 MYSQL_PASSWORD=your-password
