Fix build script for deployment platforms
- Updated build script to use npx to avoid permission issues
- Added build:render script for deployment platforms like Render
- Added build:frontend and build:backend scripts for granular control
- Added install:all script for complete dependency installation
- Tested build process successfully (325.70 kB production bundle)
- Frontend builds without errors

--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:frontend": "cd Frontend && vite",
     "dev:backend": "cd Backend && node server.js",
-    "build": "cd Frontend && vite build",
+    "build": "cd Frontend && npm install && npx vite build",
+    "build:frontend": "cd Frontend && npm install && npx vite build",
+    "build:backend": "cd Backend && npm install",
+    "build:render": "npm run build:frontend && npm run build:backend",
     "preview": "cd Frontend && vite preview",
-    "start": "cd Backend && node server.js"
+    "start": "cd Backend && node server.js",
+    "install:all": "npm install && cd Frontend && npm install && cd ../Backend && npm install"
   },
   "dependencies": {
     "@langchain/core": "^1.1.8",
