--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:frontend": "cd Frontend && vite",
     "dev:backend": "cd Backend && node server.js",
-    "build": "cd Frontend && npm install && npx vite build",
+    "build": "npm install && cd Frontend && npm install && npx vite build",
+    "build:simple": "./build.sh",
     "build:frontend": "cd Frontend && npm install && npx vite build",
     "build:backend": "cd Backend && npm install",
     "build:render": "npm run build:frontend && npm run build:backend",
