--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "skillvouch-backend",
+  "name": "backend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js"
   },
   "dependencies": {
-    "@langchain/core": "^1.1.8",
-    "@langchain/mistralai": "^1.0.2",
+    "express": "^5.2.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "mysql2": "^3.15.3"
+    "mysql2": "^3.15.3",
+    "axios": "^1.6.0",
+    "@langchain/core": "^1.1.8",
+    "@langchain/mistralai": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^22.19.3"
