--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "Frontend/package.json",
+      "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist"
@@ -13,13 +13,8 @@
     {
       "src": "/api/(.*)",
       "dest": "https://skillvouch-hexart-2026.onrender.com/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/Frontend/$1"
     }
   ],
-  "buildCommand": "cd Frontend && npm install && npm run build",
-  "outputDirectory": "Frontend/dist",
-  "installCommand": "cd Frontend && npm install"
+  "buildCommand": "npm install && npm run build",
+  "outputDirectory": "dist"
 }
