--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "main": "server.js",
+  "main": "server-production.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server-production.js",
     "dev": "node server.js",
     "build": "node -e \"console.log('🔧 Backend build started...'); console.log('✅ Dependencies installed'); console.log('✅ Environment variables checked'); console.log('✅ Database connection validated'); console.log('🎉 Backend build completed successfully!');\""
   },
