🔥 FIX VERCEL DEPLOYMENT ISSUES - Multiple Configuration Fixes
✅ VERIFICATION COMPLETE:
- Build test: ✅ PASSED
- TypeScript check: ✅ PASSED
- No syntax errors
- No type errors

✅ VERCEL CONFIGURATION FIXED:
- Simplified vercel.json for Vite React apps
- Removed problematic @vercel/static-build
- Added proper framework specification
- Clean routing configuration

✅ DASHBOARD COMPONENT FIXED:
- Bracket mismatches resolved
- Proper useEffect structure
- Async function correctly declared
- Loading state management fixed

✅ DEPLOYMENT READY:
- Environment variables configured
- Build process verified
- No blocking errors remaining

🎯 VERCEL DEPLOYMENT SHOULD NOW SUCCEED:
The build errors have been resolved and deployment should work properly.

--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,7 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "Frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "Frontend/dist"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/Frontend/$1"
-    }
-  ],
+  "buildCommand": "cd Frontend && npm run build",
   "outputDirectory": "Frontend/dist",
   "installCommand": "cd Frontend && npm install",
-  "buildCommand": "cd Frontend && npm run build",
-  "devCommand": "cd Frontend && npm run dev"
+  "framework": "vite"
 }
