--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "cd Frontend && npm run build",
+  "buildCommand": "npm run build:frontend",
   "outputDirectory": "Frontend/dist",
-  "installCommand": "cd Frontend && npm install",
+  "installCommand": "npm install && cd Frontend && npm install",
   "framework": "vite"
 }
